[package]
name = "shader-proj"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shader-proj"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.9.0"
log = "0.4.16"
wgpu = { version = "0.12"}
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
anyhow = "1.0.57"
pollster = "0.2.5"
